--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,11 @@
             <artifactId>spring-cloud-netflix-eureka-client</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
 
     </dependencies>
 
