--- a/changgou-service-api/changgou-service-user-api/pom.xml
+++ b/changgou-service-api/changgou-service-user-api/pom.xml
@@ -9,6 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <description>用戶微服務API搜尋</description>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-core</artifactId>
+        </dependency>
+    </dependencies>
     <artifactId>changgou-service-user-api</artifactId>
 
 
