--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>changgou-service-api</module>
         <module>changgou-gateway</module>
         <module>changgou-user-oauth</module>
+        <module>springSecurity</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
